# markdownusm

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
markdownusm/: cli.py  parser.py  usm.py  xml.py
markdownusm/tests/: test_integration.py  test_parser.py  test_usm.py  test_xml.py
scripts/: test.sh
